# warehouse_bot

./: Dockerfile  README.md  auth.py  bot.py  compose.yml  pyproject.toml
